# MilitaryLaw

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  send_stats_now.py
.github/workflows/: tests.yml
src/militarylaw_bot/: config.py
src/militarylaw_bot/bot/: app.py  callback_data.py  conversation.py  handlers.py  keyboards.py  middleware.py  session.py  states.py  texts.py
src/militarylaw_bot/db/: __init__.py  models.py  users.py
src/militarylaw_bot/domain/: dates.py  deferral.py  formatting.py  quantities.py
src/militarylaw_bot/jobs/: __init__.py  daily_stats.py
tests/: test_conversation_flow.py  test_dates.py  test_deferral.py  test_quantities.py
